# quad-split

./: complexity.ipynb  experiment-management.ipynb  experiment.ipynb  pretrain.ipynb  pyproject.toml  quadsplit_entrypoint-2.ipynb  results-analysis.ipynb
docs/: index.html
quadsplits/: quadsplit-explain.py  quadsplits.py  test_quadsplits.py
