[tool.poetry]
name = "quad-splits"
version = "0.1.0"
description = ""
authors = ["Bogdan Gulowaty <b.gulowaty@gmail.com>"]
readme = "README.md"
packages = [{include = "quad_splits"}]

[tool.poetry.dependencies]
python = "^3.8"
ml-utils = {path = "../ml-utils", develop = true}
pyyaml = "5.3.1"
toolz = "^0.12.0"
mlflow = "^2.5.0"
scikit-learn = "^1.3.0"
deslib = "^0.3.5"
problexity = "^0.5.7"
joblib = "^1.3.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.3"
notebook = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
